Adds Bootstrap and jQuery dependencies
Adds Bootstrap and jQuery to the project for enhanced UI components and DOM manipulation.
Improves the login component by changing the input type of the password field and integrates user login functionality.

--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -8,10 +8,11 @@
       placeholder="Ex. pat@example.com"
     />
   </mat-form-field>
+  <br/>
   <mat-form-field class="example-full-width">
     <mat-label>گذرواژه</mat-label>
     <input
-      type="email"
+      type="password"
       matInput
       [formControl]="password"
       placeholder="Ex. pat@example.com"
@@ -19,8 +20,8 @@
   </mat-form-field>
 </form>
 
-HTML TS CSS
+
 <div class="example-button-row">
   <button mat-button (click)="submit()">ورود</button>
 </div>
-{{ form.value | json }}
+<!-- {{ form.value | json }} -->
