--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,1 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./app/assets/css/bootstrap/bootstrap.min.css";
