Enables two-way data binding for family name
Improves user experience on the home page by enabling two-way data binding for the family name input field.
Also, change the event from keypress to input in name field.
Imports FormsModule in auth, landing modules and home component.

--- a/src/app/modules/landing/components/home/home.component.html
+++ b/src/app/modules/landing/components/home/home.component.html
@@ -4,13 +4,14 @@
 <br/>
 <div >
     <label>name:</label>
-    <input type="text"  (keypress)="handleChangeName($event)"  placeholder="please inter your name" >
+    <input type="text"  (input)="handleChangeName($event)"  placeholder="please inter your name" >
 </div>
 <br/>
-<div class="col co" >
+<div class="col" >
     <label>Family:</label>
-    <input type="text"  (keypress)="handleChangeFamily($event)"  placeholder="please inter your Family" >
+    <input type="text" [(ngModel)]="FullName_home.Family"  placeholder="please inter your Family" >
 </div>
+<br/>
 
 <button class="btn btn-primary">Add</button>
 
