--- a/src/app/modules/landing/components/home/home.component.html
+++ b/src/app/modules/landing/components/home/home.component.html
@@ -1,6 +1,11 @@
+<div class="text-center">
+    <p *ngIf="viewModel.Name else ElseCondName" >{{viewModel.Name}}</p>
+    <ng-template #ElseCondName>مقدار نام خالی است </ng-template>
+    <p *ngIf="viewModel.Family else ElseCondFamily" >{{viewModel.Family}}</p>
+    <br/>
+    <ng-template #ElseCondFamily>مقدار نام خانوادگی خالی است </ng-template>
+</div>
 
-<p>{{FullName_home.Name}}</p>
-<p>{{FullName_home.Family}}</p>
 <br/>
 <div >
     <label>name:</label>
@@ -9,9 +14,12 @@
 <br/>
 <div class="col" >
     <label>Family:</label>
-    <input type="text" [(ngModel)]="FullName_home.Family"  placeholder="please inter your Family" >
+    <input type="text" [(ngModel)]="viewModel.Family"  placeholder="please inter your Family" >
 </div>
 <br/>
+
+
+<p *ngFor="let item of users let i=index">{{i+"-"+item}}</p>
 
 <button class="btn btn-primary">Add</button>
 
